feat: make method to create item card and fill the showcase with cards

--- a/online-store/src/scss/elements/_main-page.scss
+++ b/online-store/src/scss/elements/_main-page.scss
@@ -11,6 +11,7 @@
 }
 
 .wrapper {
+  margin: 0 auto;
   width: 1400px;
   @include flex(row, space-between, flex-start);
 
@@ -19,6 +20,10 @@
   }
 
   .showcase {
+
+    @include flex(row, space-evenly, flex-start);
+    flex-wrap: wrap;
+    gap: 20px;
     flex-grow: 1;
   }
 }
