feat: make sort function

--- a/online-store/src/scss/elements/_main-page.scss
+++ b/online-store/src/scss/elements/_main-page.scss
@@ -8,6 +8,9 @@
 
 .top-panel {
   @include flex(row, space-evenly, center);
+  .sort {
+    @include flex(row, space-between, center);
+  }
 }
 
 .wrapper {
