--- a/online-store/src/scss/main.scss
+++ b/online-store/src/scss/main.scss
@@ -4,3 +4,4 @@
 @import "./elements/item-card";
 @import "./elements/nothing-found";
 @import "./elements/cart";
+@import "./elements/range-slider";
