--- a/online-store/src/scss/elements/_range-slider.scss
+++ b/online-store/src/scss/elements/_range-slider.scss
@@ -78,7 +78,7 @@
     }
 }
 
-.release-date__input-max {
+.release-date-filter__input-max {
   --max-track: -webkit-linear-gradient(left, rgba(225, 225, 225, 0) 0%, rgba(225, 225, 225, 0) 75%, #ffffff 75%, #ffffff 100%);
   &::-webkit-slider-runnable-track {
     background-image: var(--max-track);
