--- a/online-store/src/scss/general/_general.scss
+++ b/online-store/src/scss/general/_general.scss
@@ -1,6 +1,12 @@
 * {
+  font-family: 'Bebas Neue', cursive;
   font-size: 20px;
   box-sizing: border-box;
+}
+
+h1,
+h2 {
+  font-family: 'Abril Fatface', cursive;
 }
 
 h1 {
