--- a/online-store/src/scss/main.scss
+++ b/online-store/src/scss/main.scss
@@ -5,3 +5,6 @@
 @import "./elements/nothing-found";
 @import "./elements/cart";
 @import "./elements/range-slider";
+@import "./elements/search";
+@import "./elements/sort";
+@import "./elements/side-panel";
