--- a/online-store/src/scss/elements/_main-page.scss
+++ b/online-store/src/scss/elements/_main-page.scss
@@ -4,13 +4,20 @@
   width: 100%;
   height: 120px;
   @include flex(column, space-evenly, center);
+  color: #ffffff;
+  background-color: #535353;
 }
 
 .top-panel {
+  padding: 12px 0;
   @include flex(row, space-evenly, center);
   gap: 20px;
   .sort {
     @include flex(row, space-between, center);
+  }
+
+  @media (max-width: 825px) {
+    @include flex(column, space-evenly, center);
   }
 }
 
@@ -38,10 +45,44 @@
     gap: 20px;
     flex-grow: 1;
   }
+  
+  @media (max-width: 1400px) {
+    width: 100%;
+  }
+
+  @media (max-width: 500px) {
+    @include flex(column, space-evenly, center);
+    gap: 15px;
+  }
 }
 
 .footer {
   width: 100%;
-  height: 100px;
+  height: 150px;
+  margin-top: 20px;
   @include flex(row, space-evenly, center);
+  font-size: 22px;
+  color: #ffffff;
+  background-color: #535353;
+
+  .rsschool {
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+  
+  .rsschool:hover {
+    transform: scale(107%) rotate(10deg);
+  }
+  
+  .developer {
+    color: #fffb7e;
+    text-decoration: none;
+    transition: all 0.3s;
+  }
+  
+  .developer:hover {
+    color: #b3ffde;
+    transform: scale(107%);
+  }
+
 }
